--- a/Pipfile
+++ b/Pipfile
@@ -1,4 +1,5 @@
 #Pipfile
+
 [[source]]
 url = "https://pypi.org/simple"
 verify_ssl = true
@@ -7,9 +8,10 @@ name = "pypi"
 [packages]
 fire = "*"
 SQLAlchemy = "*"
+pymysql = "*"
+cryptography = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.8"
-
